sidebar collapse bug fix

--- a/client/src/assets/dark-index.css
+++ b/client/src/assets/dark-index.css
@@ -12,6 +12,7 @@
   }
   
   .dark-mode {
+    --container-background: #2b2b2b;
     --background-color: #0d0d0d;
     --text-color: #c0c0c0;
     --container-background: #1a1a1a;
